--- a/Labs/sem1_electronics-lab3.tex
+++ b/Labs/sem1_electronics-lab3.tex
@@ -193,7 +193,7 @@
 		
 	\section{Calculations}
 	\begin{enumerate}
-		\item Cut-in Voltage: To calculate the cut-in voltage, extend the characteristic line in graph \ref{graph:fwd-bias} backwards until it meets the x-axis. This point is the cut-in voltage. From graph \ref{graph:fwd-bias} we see that the cut-in voltage is \textbf{0.7V}.
+		\item Cut-in Voltage: To calculate the cut-in voltage, extend the characteristic line in graph \ref{graph:fwd-bias} backwards until it meets the x-axis. This point is the cut-in voltage. From graph \ref{graph:fwd-bias} we see that the cut-in voltage is \textbf{0.76V}.
 		\item Static Resistance: To calculate the static resistance, we take a point on the graph, and use the following formula to calculate the resistance: \\ $ R_{DC}  =\dfrac{V_F}{I_F} = \dfrac{1.4V}{0.9A}$= \textbf{1.556 $ \Omega $}
 		\item Dynamic Resistance: To calculate the dynamic resistance, take two points on the graph(fig. \ref{graph:fwd-bias}) and calculate the resistance with the following formula: \\ $ R_{AC} = \dfrac{\Delta V}{\Delta I}  = \dfrac{V_2 - V_1}{I_2 - I_1} = \dfrac{0.4}{1.65}  = $ \textbf{0.61$ \Omega $} \\
 	\end{enumerate}
@@ -207,8 +207,22 @@
 
 	\section{Result}
 	\begin{enumerate}
-		\item Cut-in Voltage =\textbf{ 0.7 V}
+		\item Cut-in Voltage =\textbf{ 0.76 V}
 		\item Static resistance =\textbf{ 1.556 V}
 		\item Dynamic Resistance =\textbf{ 0.61 V}
 	\end{enumerate}
+
+	\section{Post-lab Questions}
+	\begin{enumerate}
+		\item \textbf{When diode acts like ideal switch?} Diode acts like an ideal switch in the forward bias condition.
+		\item \textbf{What is the cut in voltage? Give typical values for Ge and Si.} Cut-in voltage, or knee voltage is the voltage of at point from where the current passing through the diode starts increasing rapidly. The typical value is 0.3V for Ge, and 0.7V for Si.
+		\item \textbf{What is reverse saturation current?} Reverse saturation current is the current that flown even in reverse bias condition due to presence of minority charge carriers.
+		\item \textbf{What is Dynamic and static resistance?} Dynamic resistance is the resistance offered by a diode when an AC voltage is applied across it. Static resistance is the resistance offered when direct current passes through it. 
+		\item \textbf{Define potential barrier} The potential across the depletion region due to the electric field is called the potential barrier.
+		\item \textbf{Define doping} Doping is the process of introducing electron-donor or electron-acceptor impurities in intrinsic semiconductors.
+		\item \textbf{What is the effect of temperature on $ I_0 $} As temperature increases, $ I_0 $ increases as the number of minority charge carriers increase.
+		\item \textbf{Define a Q point.} Q point is the voltage or current at a point in the circuit in its steady state.
+		\item \textbf{Explain how the diode can acts as a capacitor} In reverse bias condition, a diode can act like a capacitor. In this case, as potential is applied, charges build up, which causes the diode to act as a capacitor.
+	\end{enumerate}
 \end{document}
+ 
