--- a/Labs/sem1_electronics-lab3.tex
+++ b/Labs/sem1_electronics-lab3.tex
@@ -113,7 +113,7 @@
 		\item Run the simulation, and plot the current through the diode $ I_F $ against the voltage across the diode $ V_F $
 		\item Find the cut-in voltage and static resistance from the graph.
 	\end{enumerate}
-	\subsection{Forward Bias}
+	\subsection{Reverse Bias}
 	\begin{enumerate}
 		\item Create a schematic as shown in fig. \ref{schematic:rev-bias}
 		\item Set the simulation software to run a DC sweep from 0V-7V
@@ -187,7 +187,7 @@
 	\subsection{Forward Bias}
 		\label{graph:fwd-bias}
 		\includegraphics[width=1\linewidth]{"forward bias graph"}
-	\subsection{Forward Bias}
+	\subsection{Reverse Bias}
 		\label{graph:rev-bias}
 		\includegraphics[width=1\linewidth]{"reverse bias graph"}
 		
