--- a/fundamentals-of-electronics-engineering-sem1.tex
+++ b/fundamentals-of-electronics-engineering-sem1.tex
@@ -200,8 +200,8 @@
 		\item doping is based on conc. of impurities.
 		\begin{enumerate}
 			\item Moderate Doping: 1/[$ 10^6 \; to\; 10^8 $] $\rightarrow$ $ P\; N $
-			\item Lightly Doping: 1/[$ 10^11$] $\rightarrow$ $ P^-\; N^- $
-			\item Highly Doping: 1/[$ 10^3 $] $\rightarrow$ $ P^+\; N^+ $
+			\item Light Doping: 1/[$ 10^{11}$] $\rightarrow$ $ P^-\; N^- $
+			\item High Doping: 1/[$ 10^3 $] $\rightarrow$ $ P^+\; N^+ $
 		\end{enumerate}
 		\item 1/$ 10^8 $ converts intrinsic to extrinsic \\
 		1/$ 10^8 $ doping in Ge $\rightarrow$ $\sigma$ $\uparrow$ 12 times \\
@@ -282,6 +282,8 @@
 	mass action law: $ n_i^2 = np $\\
 	$\therefore , n_i^2 = A_0 T^3e^{-\frac{E_{G0}}{kT}}$
 	
+	\subsubsection{Mass action law}
+	under \textbf{thermal equilibrium}, $ np = N_cN_v e^{-\dfrac{E_g}{kT}} = n_i^2 $
 	\subsection{Degenerate SC:} minority conc. is negligible bcoz v high majority conc\\
 	
 	\subsection{Effect of temp. on $ \sigma $ in extrinsic SC}
