--- a/systems-management-sem1.tex
+++ b/systems-management-sem1.tex
@@ -69,6 +69,17 @@
 				\item \textbf{Non-Functional Requirements:} These are factors like performance, load, number of users, etc.
 			\end{itemize}
 %	\chapter{Basics of OS and Memory management}
-%	\chapter{Introduction to Networking}
+	\chapter{Introduction to Networking}
+	\section{What is a network}
+	\begin{itemize}
+		\item A set of devices (often referred to as nodes) connected by communication links.
+		\item An interconnected(physically or logically) collection of autonomous computers. \\
+		Two computers are said to be interconnected if they can exchange information. The connection may be copper wire, infra-red, microwave, fiber optics, satellite, etc.
+	\end{itemize}
+	\subsection{The Internet} is a computer network that interconnects hundreds of millions of computing devices throughout the world.\\
+	$\star$Client - a device that can make a request on a network.\\
+	$\star$Server - a device that can respond to the request.\\
+	These systems are called hosts.
+	\subsubsection{ISP} a collection of network routers/switches. 
 %	\chapter{Use of Computer in Commerce}
 \end{document}
